# cpp_lab4

./: CMakeLists.txt  README.md  main.cpp
Assignment 1/: Sorting.cpp  Sorting.h
Assignment 2/: Person.cpp  Person.h  PersonReg.cpp  PersonReg.h  Sorting.cpp  Sorting.h
